fixes spacing on homepage

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -30,7 +30,7 @@ main {
 }
 
   .home-container {
-    grid-template-columns: 1fr 20% 15% 10% 10% 10% 10% 10%;
+    grid-template-columns: 1fr 20% 11% 10% 10% 10% 10% 10%;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 2em 80px;
     gap: 1em 1em;
     grid-template-areas:
